# LogViewer

./: .gitignore  AbstractLinesProvider.cpp  CMakeLists.txt  FileLinesProvider.cpp  LogTabWidget.cpp  LogTabWidget.h  LogTabWidget.ui  LogViewer.sln  LogViewport.cpp  LogViewport.h  RangeChangedEmiter.h  SpeedtestLinesProvider.cpp  SpeedtestLinesProvider.h  Stream.h  WatchingFileStream.cpp  WatchingFileStream.h  logviewer.cpp  logviewer.ui  test_text.h
LogViewer/: AbstractLinesProvider.h  CMakeLists.txt  FileLinesProvider.h  LogViewer.vcxproj  LogViewport.ui  logviewer.h  main.cpp  test_text.cpp
LogViewer/GeneratedFiles/: qrc_logviewer.cpp  ui_LogTabWidget.h  ui_LogViewport.h  ui_logviewer.h
